# discord-to-slack-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
discord_notify/: main.py
